--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "install-client": "cd client && npm install",
     "install-api": "cd api && npm install",
     "server": "node api/server.js",
-    "heroku-postbuild": "npm run install-client && npm run install-api",
-    "dev": "NODE_ENV=development concurrently \"npm run server\" \"npm run start --prefix client\""
+    "heroku-postbuild": "NODE_ENV=development npm run install-client && npm run install-api",
+    "dev": "concurrently \"npm run server\" \"npm run start --prefix client\""
   },
   "keywords": [],
   "author": "",
