--- a/client/package.json
+++ b/client/package.json
@@ -16,10 +16,12 @@
     "react-loader-spinner": "^4.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "serve": "^12.0.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "PORT=3000 craco start ",
+    "start": "PORT=5000 craco start ",
+    "serve": "serve -s build",
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject"
