--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,10 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "serve": "^12.0.0",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "autoprefixer": "^9.8.6",
+    "postcss": "^7.0.36",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7"
   },
   "scripts": {
     "start": "PORT=5000 craco start ",
@@ -43,10 +46,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "autoprefixer": "^9.8.6",
-    "postcss": "^7.0.36",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7"
   }
 }
