--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "start": "PORT=5000 craco start ",
-    "serve": "serve -s build -l 5000",
+    "serve": "serve -s build -l $PORT",
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject"
